2008-05-10  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	0.10.7.2 pre-release

2008-05-10  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/mad/gstmad.c: (gst_mad_sink_event):
	* gst/mpegaudioparse/gstmpegaudioparse.c:
	(gst_mp3parse_sink_event):
	Always let FLUSH_START events flow downstream.

2008-05-07  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* configure.ac:
	  Error out if we don't have the required core/base versions.

2008-05-06  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/realmedia/rmdemux.c: (gst_rmdemux_parse_mdpr),
	(gst_rmdemux_fix_timestamp), (gst_rmdemux_parse_video_packet),
	(gst_rmdemux_parse_audio_packet), (gst_rmdemux_parse_packet):
	Fix video timestamps by adjusting it with the first timestamp found.
	Don't assume we have a complete fragment when flushing the adapter,
	packets might have been lost or the stream might just be broken.

2008-05-06  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/realmedia/rdtmanager.c: (gst_rdt_manager_plugin_init):
	Set Rank to NONE so that we don't accidentally try to autoplug the
	rdtmanager.

2008-05-05  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/mpegaudioparse/gstmpegaudioparse.c:
	(gst_mp3parse_emit_frame):
	Send a new duration message if the average bitrate changed and
	we don't know the duration from the Xing or VBRI header.
	Fixes bug #321857.

2008-04-30  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/realmedia/rtspreal.c: (rtsp_ext_real_before_send),
	(rtsp_ext_real_parse_sdp), (rtsp_ext_real_stream_select):
	* gst/realmedia/rtspreal.h:
	Move assembly rule parsing to the place where we parse the SDP as it's
	also there that we create the MDPR and we need the currently selected
	asmrule in order to select the right MTLI.
	Fixes #529359.

2008-04-29  Michael Smith <msmith@songbirdnest.com>

	* gst/realmedia/realhash.c:
	* gst/realmedia/rtspreal.c:
	  Include generated "_stdint.h" instead of <stdint.h> which might not
	  exist on some systems.
