@@ -1,3 +1,10 @@
+2008-05-13  Edward Hervey  <edward.hervey@collabora.co.uk>
+
+	* gst/realmedia/rmdemux.c: (gst_rmdemux_parse_video_packet):
+	Properly aggregate GstFlowReturn from downstream in order to properly
+	stop, and doing that as early as possible.
+	Fixes #532807
+
 2008-05-10  Jan Schmidt  <jan.schmidt@sun.com>
 
 	* configure.ac:
